# MEC-INM-dev

./: .gitignore  README.md  pubmed_fields_datas.txt  pyproject.toml
mec_inm/: main.py  pubmed_fields_datas.txt  report_pubmed_datas.txt  test_efetch_datas.ipynb
mec_inm/src/: constants.py  create_reports_from_pubmed.py  efetch_pubmed.py  esearch_pubmed.py  pubmed_connect.py
mec_inm/src/Med_Extractor/: create_reports_from_pubmed.py  efetch_pubmed.py  esearch_pubmed.py  pubmed_connect.py
mec_inm/src/front_app/mec_inm_vue/: README.md  index.html  package.json
mec_inm/src/vuejs/mec_inm_vue/: package-lock.json
